[build-system]
requires = ["flit-core>=3.9"]
build-backend = "flit_core.buildapi"

[project]
name = "openrank-mmspd-explorer-uploader"
version = "0.0.1"
description = "Upload score files created by snap-score-computer for use by the graph explorer"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "structlog>=24.1",
    "aioboto3>=12.3",
    "boto3>=1.34",
]

[[project.authors]]
name = "Eugene Kim"
email = "ek@karma3labs.com"

[project.urls]
"Homepage" = "https://github.com/openrank-xyz/mmspd-explorer-uploader"
"Bug Tracker" = "https://github.com/openrank-xyz/mmspd-explorer-uploader/issues"

[project.scripts]
mmspd-explorer-uploader = "openrank.mmspd.exploreruploader.cmd:main"

[tool.flit.module]
name = "openrank.mmspd.exploreruploader"